Languages/kubernetes/YAMLS/Web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 11za-web
  namespace: engees11za
  labels:
    app: 11za-web
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: 11za-web
  template:
    metadata:
      labels:
        app: 11za-web
    spec:
      containers:
        - name: 11za-web
          image: engees11zacontainer.azurecr.io/web:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
          ports:
            - containerPort: 3100
            - containerPort: 8080
      restartPolicy: Always
      imagePullSecrets:
        - name: engees11zacontainer-secret
      nodeSelector:
        engees: app
